Added more docs to swagger
